--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
     "axios-mock-adapter": "^2.1.0",
+    "convex": "^1.25.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
